--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "distributed-log-ai",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.65.0",
     "@aws-sdk/client-dynamodb": "^3.901.0",
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/client-sns": "^3.901.0",
     "@aws-sdk/client-sqs": "^3.901.0",
+    "@google/genai": "^1.21.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
